ページ更新 ・一部ページの文言修正 ・一部ページのリンク追加

--- a/project/index.html
+++ b/project/index.html
@@ -508,7 +508,7 @@
       <h2><a href="/project/tetlive/" >テトライブ(仮)</a></h2>
       <div class="article-style">
         
-          テトライブ一期生メンバー (※50音順、敬称略) あそんでくらす
+          とあるテトリス配信者5人のユニット(?)
         
       </div>
     </div>
