ページを更新
- テトライブ活動記録を更新

--- a/project/tetlive/index.html
+++ b/project/tetlive/index.html
@@ -650,6 +650,12 @@
 <a href="https://www.youtube.com/watch?v=HKryPU0MPa8" target="_blank" rel="noopener">[雑談枠]テトリス配信者さんたちと一緒に今年あったことを振り返ろう！　最後にテトリスもあるよ！</a></td>
 </td>
 </tr>
+<tr>
+<td>2022/01/15</td>
+<td>
+<a href="https://www.youtube.com/watch?v=4VYt1-Fjxg4" target="_blank" rel="noopener">テトリス配信者 2022年最初の集い (※視聴者参加型テトリス99あり)</a></td>
+</td>
+</tr>
 </tbody>
 </table>
 <h1 id="heading">🤔</h1>
