レイアウト崩れを再修正

--- a/project/tetlive/index.html
+++ b/project/tetlive/index.html
@@ -101,7 +101,7 @@
 <td>2022/05/04</td><td><a href="https://www.youtube.com/watch?v=Haxisb2xBVY" target=_blank rel=noopener>ぷよぷよテトリス2（配信者5人 総当たり戦：10先×10試合）</a></td></tr><tr>
 <td>2022/08/13</td><td><a href="https://www.youtube.com/watch?v=M5xEGKQqTc0" target=_blank rel=noopener>[TETRIS99]初見さん大歓迎！　テトライブメンバーでTETRIS99を遊ぶよ！　視聴者参加型</a></td></tr><tr>
 <td>2022/12/24</td><td><a href="https://www.youtube.com/watch?v=_mMdiGbgMHU" target=_blank rel=noopener>【雑談】テトリス配信者5人で忘年会やるぞ！ in 2022</a></td></tr><tr>
-<td>2023/01/09</td><td><a href="https://www.youtube.com/watch?v=qFLTf7MUBXI" target=_blank rel=noopener>テトライブの5人が新年を謹んでお祝い申し上げます　2023.01.09　拝</a></td>
+<td>2023/01/09</td><td><a href="https://www.youtube.com/watch?v=qFLTf7MUBXI" target=_blank rel=noopener>テトライブの5人が新年を謹んでお祝い申し上げます　2023.01.09　拝</a></td></tr>
 <td>2023/04/23</td><td><a href="https://www.youtube.com/watch?v=3dC2qTwCWCU" target=_blank rel=noopener>テトリス相互コーチング企画 を配信します！！【テトライブ】</td></tr></tbody></table>
 <h2 id=heading>🤔</h2><ul>
 <li>「テトライブ」という名称、大丈夫??</li></ul><h2 id=名称の由来>名称の由来</h2><img src=/images/tetlive_comment.png alt=comments>
